all warning are now only shown in debug